crates/carta/tests/snapshots/golden_e2e__rst__latex__substitutions.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
The {Example Project} toolkit is documented online.
