crates/carta/tests/snapshots/golden_e2e__rst__latex__tables-simple.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
Name & Score \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
Alice & 90 \\
Bob & 75 \\
\end{longtable}
}
