crates/carta/tests/snapshots/golden_e2e__rst__latex__target-escaped-colon.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
The reference \href{http://example.com/colon}{name: with colon} points
at an escaped-colon target.
