crates/carta/tests/snapshots/golden_e2e__rst__latex__target-uri-escaping.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A \href{http://example.com/a\%20path}{named} link and an
\href{http://example.com/another\%20path}{anonymous} link whose
destinations contain spaces.
