crates/carta/tests/snapshots/golden_e2e__rst__latex__transitions.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A paragraph above the transition.

\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}

A paragraph below the transition.
